# cv

./: Cargo.toml  Makefile
examples/: init_a_pic.rs
output/: bitcoin.pdf_enc  by.png_c2  by.png_fp  cc.png_c2  cc.png_fp  lyon_small.png_c2_enc  lyon_small.png_fp_enc  message.png_fp_enc  nc.png_c2  nc.png_fp  p.pdf_enc  p1.png_c2_enc  p2.png_c2_enc  p3.png_c2_enc  p4.png_c2_enc  p5.png_c2_enc  p6.png_c2_enc  p7.png_c2_enc  pa.pdf_enc  pa0.png_fp_enc  pa1.png_c2_enc  pa2.png_c2_enc  pa3.png_c2_enc  r.pdf_enc  r0.png_fp_enc  r1.png_c2_enc  r2.png_c2_enc  s.pdf_enc  s0.png_fp_enc  s1.png_c2_enc  s2.png_c2_enc  s3.png_c2_enc  t.pdf_enc  t0.png_fp_enc  t1.png_c2_enc  t2.png_c2_enc  t3.png_c2_enc
site/: by.json  by_c.json  cc.json  cc_c.json  cn.json  cn_c.json  cv.wasm  index.html  lyon_small_enc.json  lyon_small_fp_enc.json  p0.json  p1.json  p2.json  p3.json  p4.json  p5.json  p6.json  p7.json  pa0.json  pa1.json  pa2.json  pa3.json  r0.json  r1.json  r2.json  s0.json  s1.json  s2.json  s3.json  site.js  t0.json  t1.json  t2.json  t3.json  test_direct.json  test_direct2.json
src/: lib.rs  main.rs
