[package]

name = "cv"
version = "0.0.1"
authors = ["Emeric Chevalier <emericchevalier.pro@gmail.com>"]

[[example]]
name='init_a_pic'
path = "examples/init_a_pic.rs"


[dependencies.compress]
#version = "~0.1.2"
git = "https://github.com/cheme/rust-compress.git"
default-features = false
features = ["lz4"]

[dev-dependencies]
image="~0.18.0"
lz4="~1.22"


